# AuditorBox

./: .gitignore  Cargo.toml  MOCK_DATA_GUIDE.md  README.md  dfx.json  package-lock.json  package.json
.cursor/plans/: caseware-competitor-strategy-c7a365cd.plan.md
backend/: Cargo.toml  backend.did  main.mo
backend/src/: activity_log.rs  adjustments.rs  auth.rs  blockchain_proof.rs  client_portal.rs  clients.rs  data_import.rs  documents.rs  engagement_planning.rs  engagements.rs  entities.rs  financial_statements.rs  lib.rs  organizations.rs  pre_engagement.rs  storage.rs  templates.rs  trial_balance.rs  types.rs  working_papers.rs
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  ThemeProvider.tsx  canister_ids.json  index.css  main.tsx  theme.ts  vite-env.d.ts
frontend/src/components/: ActivityLogPage.tsx  AuthButton.tsx  BlockchainVerification.tsx  ConfirmDialog.tsx  Dashboard.tsx  DataImportPage.tsx  DocumentSubmissionPage.tsx  EngagementFormModal.tsx  EngagementsPage.tsx  EntitiesPage.tsx  EntityFormModal.tsx  LandingPage.tsx  LanguageProvider.tsx  LanguageSwitcher.tsx  LoadingScreen.tsx  LoginScreen.tsx  MainLayout.tsx  Navigation.tsx  NotificationSystem.tsx  OrganizationFormModal.tsx  OrganizationsPage.tsx  PageLayout.tsx  ProfileSetupModal.tsx  ProtectedRoute.tsx  StyledComponents.tsx  UserManagementPage.tsx  WorkingPaperFormModal.tsx  WorkingPaperViewModal.tsx  WorkingPapersPage.tsx
frontend/src/config/: regional.ts
frontend/src/data/: egyptianChartOfAccounts.ts
frontend/src/hooks/: useAuth.tsx  (+2 more)
(+37 files in other folders)
