[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = { version = "0.24", default-features = false, features = ["dates"] }
regex = "1.10"
base64 = "0.21"

[package.metadata.ic]
candid = "backend.did"

